# zeus

./: .gitignore  .swiftlint.yml  CLAUDE.md  Package.swift  README.md  TODO.md  install.command  main.py  pyproject.toml  run-branch.sh
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Sources/OpenZeus/: OpenZeusApp.swift
Sources/OpenZeus/Core/: AppConfig.swift  AppDatabase.swift  OrchestratorActor.swift
Sources/OpenZeus/Models/: AgentStatus.swift  Project.swift  ProjectApp.swift  SavedCommand.swift  Task.swift  TerminalState.swift  WatchMode.swift
Sources/OpenZeus/Services/: ActivityNotifier.swift  FileLogger.swift  GitService.swift  WorktreeService.swift
Sources/OpenZeus/Views/: ContentView.swift  ProjectList.swift  QuickCommandsView.swift  SettingsView.swift  TaskList.swift  TerminalStore.swift  TerminalView.swift
Tests/OpenZeusTests/: OpenZeusTests.swift  TerminalWindowManagementTests.swift
docs/: config.example.json  gemini-project-ui.bmpr
docs/plans/: GIT_WORKTREE_SUPPORT.md  TERMINAL_ACTIVITY_DETECTION.md  TERMINAL_WINDOW_MANAGEMENT.md  ZEUS_AGENTS_ORCHESTRATOR.md  app-configuration.md  development-plan.md  git-notes-enforcement.md
scripts/: check.sh  install-hooks.sh  lint.sh  setup-git-notes.sh
src/zeus/: __init__.py  __main__.py  app.py
src/zeus/core/: __init__.py  commands.py  component.py  project.py  state.py
src/zeus/models/: __init__.py  schema.py
src/zeus/resources/: __init__.py
(+17 files in other folders)
