[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PyQt6>=6.0.0"]

[project.scripts]
zeus = "zeus.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
